<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:id="@+id/nodelapan"
android:layout_height="wrap_content"
android:background="@color/white"
android:scrollbars="vertical"
tools:context=".ui.slideshow.BAB4.NoEnamPuluhFragment">
<FrameLayout
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/subsub3"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:textSize="17sp"
      android:text="Pengukuran Bidang Tanah Untuk Keperluan Pengembalian Batas"
      android:textAlignment="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    <RelativeLayout
      android:id="@+id/relisibp2"
      android:layout_below="@id/subsub3"
      android:layout_marginStart="7dp"
      android:layout_marginEnd="7dp"
      android:layout_marginTop="15dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/dasargb"
        android:layout_width="wrap_content"
        android:text="Dasar Hukum : "
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"/>
      <View
        android:layout_toEndOf="@id/dasargb"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        android:layout_height="1dp"
        android:background="@color/black"/>
      <RelativeLayout
        android:layout_below="@id/dasargb"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="5dp"
        android:background="@drawable/backgroundtext"
        android:layout_height="wrap_content">
        <TextView
          android:id="@+id/isidasargb21"
          android:text="@string/_1"
          android:textSize="@dimen/textrecy"
          android:layout_width="25dp"
          android:layout_height="wrap_content"/>
        <TextView
          android:id="@+id/uugb21"
          android:layout_toEndOf="@id/isidasargb21"
          android:layout_width="match_parent"
          android:text="UU No. 5/1960"
          android:textSize="@dimen/textrecy"
          android:layout_height="wrap_content"/>
        <TextView
          android:id="@+id/isidasargb22"
          android:text="@string/_2"
          android:layout_below="@id/uugb21"
          android:layout_width="25dp"
          android:layout_height="wrap_content"/>
        <TextView
          android:id="@+id/uugb22"
          android:layout_below="@id/uugb21"
          android:textSize="@dimen/textrecy"
          android:layout_toEndOf="@id/isidasargb21"
          android:layout_width="match_parent"
          android:text="PP No. 24/1997"
          android:layout_height="wrap_content"/>
        <TextView
          android:id="@+id/isidasargb23"
          android:text="@string/_3"
          android:textSize="@dimen/textrecy"
          android:layout_below="@id/uugb22"
          android:layout_width="25dp"
          android:layout_height="wrap_content"/>
        <TextView
          android:id="@+id/uugb23"
          android:layout_below="@id/uugb22"
          android:textSize="@dimen/textrecy"
          android:layout_toEndOf="@id/isidasargb22"
          android:layout_width="match_parent"
          android:text="PP No. 13/2010"
          android:layout_height="wrap_content"/>
        <TextView
          android:id="@+id/isidasargb24"
          android:text="4."
          android:textSize="@dimen/textrecy"
          android:layout_below="@id/uugb23"
          android:layout_width="25dp"
          android:layout_height="wrap_content"/>
        <TextView
          android:id="@+id/uugb24"
          android:layout_below="@id/uugb23"
          android:layout_toEndOf="@id/isidasargb23"
          android:layout_width="match_parent"
          android:text="PMNA/KBPN No. 3/1997"
          android:textSize="@dimen/textrecy"
          android:layout_height="wrap_content"/>
      </RelativeLayout>
    </RelativeLayout>

    <TextView
      android:id="@+id/persyaratangb"
      android:layout_width="wrap_content"
      android:text="Persyaratan : "
      android:textSize="17sp"
      android:layout_marginTop="15dp"
      android:layout_below="@id/relisibp2"
      android:layout_marginStart="10dp"
      android:layout_height="wrap_content"/>
    <View
      android:layout_toEndOf="@id/persyaratangb"
      android:layout_width="match_parent"
      android:layout_marginTop="27dp"
      android:layout_marginEnd="7dp"
      android:layout_below="@id/relisibp2"
      android:layout_marginStart="15dp"
      android:layout_height="1dp"
      android:background="@color/black"/>
    <RelativeLayout
      android:id="@+id/relpersyaratangb"
      android:layout_below="@id/persyaratangb"
      android:layout_width="match_parent"
      android:layout_marginStart="7dp"
      android:layout_marginEnd="7dp"
      android:paddingTop="5dp"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:paddingBottom="5dp"
      android:background="@drawable/backgroundtext"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/nosyaratgb21"
        android:text="@string/_1"
        android:textSize="@dimen/textrecy"
        android:layout_width="25dp"
        android:layout_height="wrap_content"/>
      <com.codesgood.views.JustifiedTextView
        android:id="@+id/isisyaratgb1"
        android:gravity="start|end"
        android:justificationMode="inter_word"
        tools:targetApi="o"
        android:layout_toEndOf="@id/nosyaratgb21"
        android:textSize="@dimen/textrecy"
        android:layout_width="match_parent"
        android:text="Formulir permohonan yang sudah diisi dan ditanda tangani pemohonn atau kuasanya diatas materai cukup"
        android:layout_height="wrap_content"/>
      <TextView
        android:id="@+id/nosyaratgb22"
        android:text="@string/_2"
        android:layout_below="@id/isisyaratgb1"
        android:textSize="@dimen/textrecy"
        android:layout_width="25dp"
        android:layout_height="wrap_content"/>
      <com.codesgood.views.JustifiedTextView
        android:id="@+id/isisyaratgb2"
        android:gravity="start|end"
        android:justificationMode="inter_word"
        tools:targetApi="o"
        android:layout_below="@id/isisyaratgb1"
        android:textSize="@dimen/textrecy"
        android:layout_toEndOf="@id/nosyaratgb22"
        android:layout_width="match_parent"
        android:text="Surat Kuasa apabila dikuasakan"
        android:layout_height="wrap_content"/>
      <TextView
        android:id="@+id/nosyaratgb3"
        android:text="3."
        android:textSize="@dimen/textrecy"
        android:layout_below="@id/isisyaratgb2"
        android:layout_width="25dp"
        android:layout_height="wrap_content"/>
      <com.codesgood.views.JustifiedTextView
        android:id="@+id/isisyaratgb3"
        android:gravity="start|end"
        android:justificationMode="inter_word"
        tools:targetApi="o"
        android:layout_below="@id/isisyaratgb2"
        android:textSize="@dimen/textrecy"
        android:layout_toEndOf="@id/nosyaratgb3"
        android:layout_width="match_parent"
        android:text="Fotocopy identitas (KTP, KK) pemohon dan kuasa apabila dikuasakan, yang telah dicocokkan dengan aslinya oleh petugas loket"
        android:layout_height="wrap_content"/>
      <TextView
        android:id="@+id/nosyaratgb4"
        android:text="4."
        android:textSize="@dimen/textrecy"
        android:layout_below="@id/isisyaratgb3"
        android:layout_width="25dp"
        android:layout_height="wrap_content"/>
      <com.codesgood.views.JustifiedTextView
        android:id="@+id/isisyaratgb4"
        android:gravity="start|end"
        android:justificationMode="inter_word"
        tools:targetApi="o"
        android:layout_below="@id/isisyaratgb3"
        android:textSize="@dimen/textrecy"
        android:layout_toEndOf="@id/nosyaratgb3"
        android:layout_width="match_parent"
        android:text="Fotocopy Akta Pendirian dan Pengesahan Badan Hukum yang telah dicocokkan dengan aslinya oleh petugas loket bagi Badan Hukum"
        android:layout_height="wrap_content"/>
      <TextView
        android:id="@+id/nosyaratgb5"
        android:text="5."
        android:textSize="@dimen/textrecy"
        android:layout_below="@id/isisyaratgb4"
        android:layout_width="25dp"
        android:layout_height="wrap_content"/>
      <com.codesgood.views.JustifiedTextView
        android:id="@+id/isisyaratgb5"
        android:gravity="start|end"
        android:justificationMode="inter_word"
        tools:targetApi="o"
        android:layout_below="@id/isisyaratgb4"
        android:textSize="@dimen/textrecy"
        android:layout_toEndOf="@id/nosyaratgb3"
        android:layout_width="match_parent"
        android:text="Fotocopy Sertifikat yang telah dicocokkan dengan aslinya oleh petugas loket"
        android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/relbiayagb2"
      android:layout_below="@id/relpersyaratangb"
      android:layout_marginStart="7dp"
      android:layout_marginEnd="7dp"
      android:layout_marginTop="15dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/biayagb2"
        android:layout_width="wrap_content"
        android:text="Biaya : "
        android:layout_marginStart="10dp"
        android:textSize="17sp"
        android:layout_height="wrap_content"/>
      <View
        android:layout_toEndOf="@id/biayagb2"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        android:layout_height="1dp"
        android:background="@color/black"/>
      <RelativeLayout
        android:layout_below="@id/biayagb2"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="5dp"
        android:background="@drawable/backgroundtext"
        android:layout_height="wrap_content">
        <com.codesgood.views.JustifiedTextView
          android:id="@+id/isibiayagb2"
          android:gravity="start|end"
          android:justificationMode="inter_word"
          tools:targetApi="o"
          android:textSize="@dimen/textrecy"
          android:text="Sesuai ketentuan Peraturan Pemerintah tentang jenis dan tarif atas jenis penerimaan negara bukan pajak yang berlaku pada Badan Pertanahan Nasional Republik Indonesia"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/relwaktugb2"
      android:layout_below="@id/relbiayagb2"
      android:layout_marginStart="7dp"
      android:layout_marginEnd="7dp"
      android:layout_marginTop="15dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/waktugb2"
        android:layout_width="wrap_content"
        android:text="Waktu : "
        android:layout_marginStart="10dp"
        android:textSize="17sp"
        android:layout_height="wrap_content"/>
      <View
        android:layout_toEndOf="@id/waktugb2"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        android:layout_height="1dp"
        android:background="@color/black"/>
      <RelativeLayout
        android:layout_below="@id/waktugb2"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="5dp"
        android:background="@drawable/backgroundtext"
        android:layout_height="wrap_content">
        <RelativeLayout
          android:id="@+id/urut1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            android:id="@+id/bullet"
            android:layout_width="15dp"
            android:text="*"
            android:layout_height="wrap_content"/>
          <com.codesgood.views.JustifiedTextView
            android:id="@+id/isiwaktu1"
            android:gravity="start|end"
            android:layout_toEndOf="@id/bullet"
            android:justificationMode="inter_word"
            tools:targetApi="o"
            android:textSize="@dimen/textrecy"
            android:text="12 (dua belas) hari untuk luasan tidak lebih dari 40 Ha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
          android:id="@+id/urut2"
          android:layout_marginTop="10dp"
          android:layout_below="@id/urut1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            android:id="@+id/bullet1"
            android:layout_width="15dp"
            android:text="*"
            android:layout_height="wrap_content"/>
          <com.codesgood.views.JustifiedTextView
            android:id="@+id/isiwaktu2"
            android:gravity="start|end"
            android:layout_toEndOf="@id/bullet1"
            android:justificationMode="inter_word"
            tools:targetApi="o"
            android:textSize="@dimen/textrecy"
            android:text="30 (tiga puluh) hari untuk luasan lebih dari 40 Ha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
      </RelativeLayout>
    </RelativeLayout>

    <!--      disini keterangan-->
    <RelativeLayout
      android:id="@+id/relketerangangb"
      android:layout_below="@id/relwaktugb2"
      android:layout_marginStart="7dp"
      android:layout_marginEnd="7dp"
      android:layout_marginTop="15dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:id="@+id/ketgb"
        android:layout_width="wrap_content"
        android:text="Keterangan : "
        android:layout_marginStart="10dp"
        android:textSize="17sp"
        android:layout_height="wrap_content"/>
      <View
        android:layout_toEndOf="@id/ketgb"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="15dp"
        android:layout_height="1dp"
        android:background="@color/black"/>
      <RelativeLayout
        android:layout_below="@id/ketgb"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="5dp"
        android:background="@drawable/backgroundtext"
        android:layout_height="wrap_content">
        <com.codesgood.views.JustifiedTextView
          android:id="@+id/isiketgb"
          android:gravity="start|end"
          android:justificationMode="inter_word"
          tools:targetApi="o"
          android:textSize="@dimen/textrecy"
          android:text="Formulir permohonan memuat:"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
        <RelativeLayout
          android:id="@+id/relketform"
          android:layout_below="@id/isiketgb"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            android:id="@+id/ketgb1"
            android:layout_width="15dp"
            android:text="@string/_1"
            android:textSize="@dimen/textrecy"
            android:layout_height="wrap_content"/>
          <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isiketgb1"
            android:textSize="@dimen/textrecy"
            android:text="@string/identitas_diri"
            android:layout_toEndOf="@id/ketgb1"/>
          <TextView
            android:id="@+id/ketgb2"
            android:layout_width="15dp"
            android:textSize="@dimen/textrecy"
            android:text="@string/_2"
            android:layout_below="@id/isiketgb1"
            android:layout_height="wrap_content"/>
          <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isiketgb2"
            android:layout_below="@id/isiketgb1"
            android:textSize="@dimen/textrecy"
            android:text="@string/luas_letak_dan_penggunaan_tanah_yang_dimohon"
            android:layout_toEndOf="@id/ketgb2"/>
          <TextView
            android:id="@+id/ketgb3"
            android:layout_width="15dp"
            android:textSize="@dimen/textrecy"
            android:text="@string/_3"
            android:layout_below="@id/isiketgb2"
            android:layout_height="wrap_content"/>
          <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isiketgb3"
            android:layout_below="@id/isiketgb2"
            android:textSize="@dimen/textrecy"
            android:text="Pernyataan telah memasang tanda batas"
            android:layout_toEndOf="@id/ketgb2"/>
        </RelativeLayout>
      </RelativeLayout>
    </RelativeLayout>
  </RelativeLayout>
</FrameLayout>
</ScrollView>
